--- a/app/src/main/res/layout/wallet_activity_upload_information_type.xml
+++ b/app/src/main/res/layout/wallet_activity_upload_information_type.xml
@@ -19,7 +19,7 @@
         android:id="@+id/tv_upload_idhub_information"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="39dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -27,29 +27,28 @@
         app:layout_constraintTop_toBottomOf="@id/title">
 
         <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:src="@mipmap/wallet_upload_information" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/wallet_upload_btn_background"
             android:gravity="center"
             android:paddingLeft="16dp"
             android:paddingTop="8dp"
             android:paddingRight="16dp"
             android:paddingBottom="8dp"
             android:text="@string/wallet_upload_user_information"
-            android:textColor="@color/wallet_white"
-            android:textSize="16sp" />
+            android:textColor="@color/wallet_black"
+            android:textSize="14sp" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/tv_upload_file"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="80dp"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -57,22 +56,21 @@
         app:layout_constraintTop_toBottomOf="@id/tv_upload_idhub_information">
 
         <ImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:src="@mipmap/wallet_upload_file" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/wallet_upload_btn_background"
             android:gravity="center"
             android:paddingLeft="16dp"
             android:paddingTop="8dp"
             android:paddingRight="16dp"
             android:paddingBottom="8dp"
             android:text="@string/wallet_upload_file"
-            android:textColor="@color/wallet_white"
-            android:textSize="16sp" />
+            android:textColor="@color/wallet_black"
+            android:textSize="14sp" />
     </LinearLayout>
 
 
