--- a/app/src/main/res/layout/wallet_fragment_me_level_item_view.xml
+++ b/app/src/main/res/layout/wallet_fragment_me_level_item_view.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:id="@+id/iv_vip_icon"
         android:src="@mipmap/wallet_idhub_svip_success"
-        android:layout_width="wrap_content"
+        android:layout_width="66dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_height="wrap_content" />
@@ -19,12 +19,12 @@
         android:id="@+id/tv_level_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="7dp"
         android:includeFontPadding="false"
         android:gravity="center"
         tools:text="合规投sshavjhasjahsdgdas资者"
         android:textColor="@color/wallet_black"
-        android:textSize="17sp"
+        android:textSize="12sp"
         app:layout_constraintLeft_toLeftOf="@id/iv_vip_icon"
         app:layout_constraintRight_toRightOf="@id/iv_vip_icon"
         app:layout_constraintTop_toBottomOf="@id/iv_vip_icon" />
@@ -36,9 +36,14 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
         tools:text="未认证"
-        android:textColor="@color/wallet_create_wallet_hint"
-        android:textSize="13sp"
+        android:textColor="@color/wallet_white"
+        android:textSize="8sp"
+        android:background="@drawable/wallet_blue_background_3"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
         app:layout_constraintRight_toRightOf="@id/tv_level_name"
         app:layout_constraintLeft_toLeftOf="@id/tv_level_name"
         app:layout_constraintTop_toBottomOf="@id/tv_level_name" />
