--- a/app/src/main/res/layout/wallet_fragment_me.xml
+++ b/app/src/main/res/layout/wallet_fragment_me.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".me.MeFragment">
+
     <include
         android:id="@+id/top_view"
         layout="@layout/wallet_fragment_me_top_view"
@@ -13,6 +14,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/srl_level"
         android:layout_width="match_parent"
@@ -31,25 +33,18 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/vip_icon"
-                    android:layout_width="25dp"
-                    android:layout_height="20dp"
-                    android:layout_marginLeft="15dp"
-                    android:layout_marginTop="10dp"
-                    android:src="@mipmap/wallet_me_vip_icon"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
+                    android:id="@+id/my_claims"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="15dp"
                     android:text="@string/wallet_vip_my_medal"
                     android:textColor="@color/wallet_black"
                     android:textSize="16sp"
-                    app:layout_constraintBottom_toBottomOf="@id/vip_icon"
-                    app:layout_constraintLeft_toRightOf="@id/vip_icon"
-                    app:layout_constraintTop_toTopOf="@id/vip_icon" />
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <include
                     android:id="@+id/id_hub_vip"
@@ -59,35 +54,45 @@
                     android:layout_marginTop="10dp"
                     app:layout_constraintLeft_toLeftOf="@id/qualified_investor"
                     app:layout_constraintRight_toRightOf="@id/qualified_investor"
-                    app:layout_constraintTop_toBottomOf="@id/vip_icon" />
+                    app:layout_constraintTop_toBottomOf="@id/my_claims" />
 
                 <include
                     android:id="@+id/id_hub_super_vip"
                     layout="@layout/wallet_fragment_me_level_item_view"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintLeft_toLeftOf="@id/qualified_purchaser"
-                    app:layout_constraintRight_toRightOf="@id/qualified_purchaser"
+                    android:layout_marginLeft="38dp"
+                    app:layout_constraintLeft_toRightOf="@id/id_hub_vip"
                     app:layout_constraintTop_toTopOf="@id/id_hub_vip" />
 
+                <TextView
+                    android:id="@+id/my_claims_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="15dp"
+                    android:text="@string/wallet_vip_my_medal"
+                    android:textColor="@color/wallet_black"
+                    android:textSize="16sp"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/id_hub_super_vip" />
                 <include
                     android:id="@+id/qualified_investor"
                     layout="@layout/wallet_fragment_me_level_item_view"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toLeftOf="@id/qualified_purchaser"
-                    app:layout_constraintTop_toBottomOf="@id/id_hub_vip" />
+                    app:layout_constraintTop_toBottomOf="@id/my_claims_2" />
 
                 <include
                     android:id="@+id/qualified_purchaser"
                     layout="@layout/wallet_fragment_me_level_item_view"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="38dp"
                     app:layout_constraintLeft_toRightOf="@id/qualified_investor"
-                    app:layout_constraintRight_toLeftOf="@id/st_compliance_investor"
                     app:layout_constraintTop_toTopOf="@id/qualified_investor" />
 
                 <include
@@ -95,9 +100,9 @@
                     layout="@layout/wallet_fragment_me_level_item_view"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="38dp"
                     android:layout_marginRight="25dp"
                     app:layout_constraintLeft_toRightOf="@id/qualified_purchaser"
-                    app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="@id/qualified_investor" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
