--- a/app/src/main/res/layout/wallet_fragment_me_top_view.xml
+++ b/app/src/main/res/layout/wallet_fragment_me_top_view.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="241dp"
+    android:layout_height="wrap_content"
     android:background="@mipmap/wallet_main_top_background">
 
     <ImageView
         android:id="@+id/upload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="17dp"
+        android:padding="17dp"
         android:src="@mipmap/wallet_upload_icon"
         app:layout_constraintRight_toLeftOf="@id/scan_code"
         app:layout_constraintTop_toTopOf="@id/scan_code" />
@@ -19,7 +19,7 @@
         android:id="@+id/scan_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="17dp"
+        android:padding="17dp"
         android:src="@mipmap/wallet_scan_code_white"
         app:layout_constraintRight_toLeftOf="@id/iv_setting"
         app:layout_constraintTop_toTopOf="@id/iv_setting" />
@@ -28,8 +28,8 @@
         android:id="@+id/iv_setting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginTop="20dp"
+        android:padding="15dp"
         android:src="@mipmap/wallet_setting_white"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -39,93 +39,84 @@
         android:layout_width="86dp"
         android:layout_height="86dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="55dp"
         android:src="@mipmap/wallet_default_head"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <LinearLayout
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/tv_name"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="12dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="@id/iv_head"
+        android:textColor="@color/wallet_white"
+        android:layout_marginTop="17dp"
+        android:textSize="17sp"
         app:layout_constraintLeft_toRightOf="@id/iv_head"
-        app:layout_constraintRight_toLeftOf="@id/iv_setting"
-        app:layout_constraintTop_toTopOf="@id/iv_head">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/wallet_white"
-                android:textSize="17sp"
-                tools:text="Idhub did plus" />
-
-            <TextView
-                android:id="@+id/tv_ein"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="12dp"
-                android:ellipsize="middle"
-                android:singleLine="true"
-                android:textColor="@color/wallet_white"
-                android:textSize="17sp"
-                android:visibility="gone"
-                app:layout_constraintLeft_toLeftOf="@id/iv_head"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_head"
-                tools:text="EIN:" />
-        </LinearLayout>
+        app:layout_constraintTop_toTopOf="@id/iv_head"
+        tools:text="IDHUB" />
 
 
-        <TextView
-            android:id="@+id/tv_signature"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:textColor="@color/wallet_white"
-            android:textSize="13sp"
-            tools:text="Idhub did plus" />
+    <TextView
+        android:id="@+id/tv_ein"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:ellipsize="middle"
+        android:singleLine="true"
+        android:textColor="@color/wallet_white"
+        android:textSize="17sp"
+        app:layout_constraintLeft_toRightOf="@id/tv_name"
+        app:layout_constraintTop_toTopOf="@id/tv_name"
+        tools:text="EIN: 3" />
 
 
-        <TextView
-            android:id="@+id/tv_recover_address"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:ellipsize="middle"
-            android:singleLine="true"
-            android:textColor="@color/wallet_white"
-            android:textSize="13sp"
-            app:layout_constraintLeft_toLeftOf="@id/iv_head"
-            app:layout_constraintRight_toRightOf="@id/tv_ein"
-            app:layout_constraintTop_toBottomOf="@id/tv_ein"
-            tools:text="recoverAddress:" />
+    <TextView
+        android:id="@+id/tv_signature"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="25dp"
+        android:textColor="@color/wallet_white"
+        android:textSize="13sp"
+        app:layout_constraintLeft_toLeftOf="@id/tv_name"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_name"
+        tools:text="Idhub did plus" />
 
-        <TextView
-            android:id="@+id/tv_ein_number"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:ellipsize="middle"
-            android:singleLine="true"
-            android:textColor="@color/wallet_white"
-            android:textSize="13sp"
-            app:layout_constraintLeft_toLeftOf="@id/iv_head"
-            app:layout_constraintRight_toRightOf="@id/tv_ein"
-            app:layout_constraintTop_toBottomOf="@id/tv_recover_address"
-            tools:text="erc1484::" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/tv_recover_address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="25dp"
+        android:ellipsize="middle"
+        android:singleLine="true"
+        android:textColor="@color/wallet_white"
+        android:textSize="13sp"
+        app:layout_constraintLeft_toLeftOf="@id/iv_head"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/iv_head"
+        tools:text="recoverAddress:" />
+
+    <TextView
+        android:id="@+id/tv_ein_number"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginBottom="20dp"
+        android:ellipsize="middle"
+        android:singleLine="true"
+        android:textColor="@color/wallet_white"
+        android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/iv_head"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_recover_address"
+        tools:text="erc1484::" />
 
 
 </com.idhub.wallet.me.view.MeTopView>
