--- a/app/src/main/res/layout/wallet_upload_list_item.xml
+++ b/app/src/main/res/layout/wallet_upload_list_item.xml
@@ -1,102 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.idhub.wallet.me.information.view.UploadFileOtherView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
-    <Spinner
-        android:id="@+id/spinner_type"
+
+    <TextView
+        android:id="@+id/file_type"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="20dp"
+        android:text="ID_FONT"
+        android:drawableRight="@mipmap/wallet_arrow_down_gray"
+        android:textSize="13sp"
+       android:gravity="center_vertical"
+        android:paddingLeft="10dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:entries="@array/identity_file_spinner"
-        app:layout_constraintRight_toLeftOf="@id/file_delete"
+        android:background="@drawable/wallet_rectangle_line_4"
         app:layout_constraintBottom_toBottomOf="@id/tv_select_file_name"
         app:layout_constraintLeft_toRightOf="@id/tv_select_file_name"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/tv_select_file_name" />
+
+
+<!--    <Spinner-->
+<!--        android:id="@+id/spinner_type"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginLeft="20dp"-->
+<!--        android:entries="@array/identity_file_spinner"-->
+<!--        android:paddingTop="5dp"-->
+<!--        android:paddingBottom="5dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="@id/tv_select_file_name"-->
+<!--        app:layout_constraintLeft_toRightOf="@id/tv_select_file_name"-->
+
+<!--        app:layout_constraintTop_toTopOf="@id/tv_select_file_name" />-->
 
     <TextView
         android:id="@+id/tv_select_file_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="23dp"
         android:text="@string/wallet_select_upload_file_type"
         android:textColor="@color/wallet_black"
+        android:textSize="13sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/et_information"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginRight="12dp"
-        android:background="@null"
-        android:minHeight="60dp"
-        android:textSize="14sp"
-        app:layout_constraintLeft_toRightOf="@id/tv_title"
-        app:layout_constraintRight_toLeftOf="@id/file_delete"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="20dp"
+        android:hint="@string/wallet_please_input_file_name"
+        android:textSize="13sp"
+        android:gravity="center_vertical"
+        android:paddingLeft="10dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         app:layout_constraintBottom_toBottomOf="@id/tv_title"
-        app:layout_constraintTop_toTopOf="@id/tv_title"
-        android:hint="@string/wallet_please_input_file_name" />
+        android:background="@drawable/wallet_rectangle_line_4"
+        app:layout_constraintLeft_toRightOf="@id/tv_title"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_title" />
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:layout_marginTop="13dp"
         android:gravity="center"
         android:paddingTop="12dp"
-        android:layout_marginTop="3dp"
         android:paddingBottom="12dp"
+        android:text="@string/wallet_file_name"
         android:textColor="@color/wallet_black"
-        android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/tv_select_file_name"
+        android:textSize="13sp"
         app:layout_constraintLeft_toLeftOf="@id/tv_select_file_name"
-        android:text="@string/wallet_file_name" />
+        app:layout_constraintTop_toBottomOf="@id/file_type" />
 
-    <ImageView
-        android:id="@+id/file_delete"
-        android:src="@mipmap/wallet_delete"
-        android:layout_width="wrap_content"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:padding="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_height="wrap_content" />
-
-    <Button
+    <TextView
         android:id="@+id/btn_select_file"
-        app:layout_constraintTop_toBottomOf="@id/tv_title"
-        app:layout_constraintLeft_toLeftOf="@id/tv_select_file_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:text="@string/wallet_upload_file"
-        android:layout_height="wrap_content" />
+        android:textSize="11sp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:gravity="center"
+        android:layout_marginTop="15dp"
+        android:background="@mipmap/wallet_select_file_btn_background"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_information" />
 
     <TextView
         android:id="@+id/file_path"
-        app:layout_constraintTop_toBottomOf="@id/btn_select_file"
-        tools:text="@string/wallet_upload"
-        android:textSize="16sp"
-        android:textColor="@color/wallet_black"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        app:layout_constraintLeft_toLeftOf="@id/tv_select_file_name"
+        android:textColor="@color/wallet_black"
+        android:textSize="16sp"
         android:visibility="gone"
-        android:layout_height="wrap_content" />
+        app:layout_constraintLeft_toLeftOf="@id/tv_select_file_name"
+        app:layout_constraintTop_toBottomOf="@id/btn_select_file"
+        tools:text="@string/wallet_upload" />
 
 
     <ImageView
         android:id="@+id/file_image"
-        android:visibility="gone"
-        tools:src="@mipmap/wallet_eth_icon"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="15dp"
-        app:layout_constraintTop_toBottomOf="@id/file_path"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/tv_select_file_name"
-        android:layout_width="50dp"
-        android:layout_height="50dp" />
+        app:layout_constraintTop_toBottomOf="@id/file_path"
+        tools:src="@mipmap/wallet_eth_icon" />
 </com.idhub.wallet.me.information.view.UploadFileOtherView>
