--- a/app/src/main/res/layout/activity_level2.xml
+++ b/app/src/main/res/layout/activity_level2.xml
@@ -10,12 +10,13 @@
         android:id="@+id/tv_idhub_vip"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:textSize="15sp"
         android:textColor="@color/wallet_text_black"
         android:text="@string/wallet_idhub_super_vip_content"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginLeft="15dp"
+        android:lineSpacingExtra="6dp"
+        android:layout_marginRight="15dp"
         android:layout_marginTop="15dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
