--- a/app/src/main/res/drawable/wallet_shape_button.xml
+++ b/app/src/main/res/drawable/wallet_shape_button.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <corners android:radius="3dp" />
-    <solid android:color="@color/wallet_blue_text" />
+    <solid android:color="@color/wallet_main_blue_color" />
 </shape>
