--- a/app/src/main/res/layout/activity_level3.xml
+++ b/app/src/main/res/layout/activity_level3.xml
@@ -22,11 +22,12 @@
                 android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18sp"
+                android:textSize="15sp"
                 android:textColor="@color/wallet_text_black"
                 tools:text="@string/wallet_idhub_vip_content"
-                android:layout_marginLeft="12dp"
-                android:layout_marginRight="12dp"
+                android:layout_marginLeft="15dp"
+                android:lineSpacingExtra="6dp"
+                android:layout_marginRight="15dp"
                 android:layout_marginTop="15dp" />
             <RadioGroup
                 android:id="@+id/qualified_investor_condition"
@@ -41,16 +42,22 @@
                     android:id="@+id/qualified_investor_condition_first"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:lineSpacingExtra="6dp"
+                    android:paddingLeft="10dp"
+                    android:button="@drawable/wallet_checkbox_blue_background"
                     android:text="@string/wallet_qualified_investor_condition_first"
-                    android:textSize="16sp" />
+                    android:textSize="15sp" />
 
                 <RadioButton
                     android:id="@+id/qualified_investor_condition_second"
                     android:layout_width="wrap_content"
+                    android:lineSpacingExtra="6dp"
+                    android:paddingLeft="10dp"
+                    android:button="@drawable/wallet_checkbox_blue_background"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="25dp"
                     android:text="@string/wallet_qualified_investor_condition_second"
-                    android:textSize="16sp" />
+                    android:textSize="15sp" />
             </RadioGroup>
 
             <TextView
