--- a/app/src/main/res/layout/activity_level5.xml
+++ b/app/src/main/res/layout/activity_level5.xml
@@ -10,13 +10,14 @@
         android:id="@+id/tv_idhub_vip"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textColor="@color/wallet_text_black"
-        android:text="@string/wallet_compliance_investor_vip_content"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
+        android:layout_marginRight="15dp"
+        android:lineSpacingExtra="6dp"
+        android:text="@string/wallet_compliance_investor_vip_content"
+        android:textColor="@color/wallet_text_black"
+        android:textSize="15sp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
 
@@ -28,6 +29,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tv_apply"
         style="@style/WalletCommonButton"
