--- a/app/src/main/res/layout/wallet_activity_wallet_info.xml
+++ b/app/src/main/res/layout/wallet_activity_wallet_info.xml
@@ -15,26 +15,27 @@
         android:background="@color/wallet_white"
         app:layout_constraintTop_toBottomOf="@id/title">
 
-        <ImageView
-            android:id="@+id/iv_head"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="12dp"
-            android:src="@mipmap/wallet_wallet_head"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+<!--        <ImageView-->
+<!--            android:id="@+id/iv_head"-->
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:layout_marginLeft="20dp"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            android:layout_marginBottom="12dp"-->
+<!--            android:src="@mipmap/wallet_wallet_head"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintLeft_toLeftOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
 
         <TextView
             android:id="@+id/tv_wallet_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="10dp"
             android:textColor="@color/wallet_black"
-            app:layout_constraintLeft_toRightOf="@id/iv_head"
-            app:layout_constraintTop_toTopOf="@id/iv_head"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
             tools:text="ETH_WALLET" />
 
         <TextView
@@ -49,6 +50,8 @@
             android:drawableRight="@mipmap/wallet_copy_blue"
             app:layout_constraintLeft_toLeftOf="@id/tv_wallet_name"
             app:layout_constraintTop_toBottomOf="@id/tv_wallet_name"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="10dp"
             tools:text="dsakjdaskjfaskjals" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
