--- a/app/src/main/res/layout/wallet_common_strings_item.xml
+++ b/app/src/main/res/layout/wallet_common_strings_item.xml
@@ -10,7 +10,8 @@
         android:textSize="13sp"
         android:padding="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_width="wrap_content"
+        android:layout_marginRight="10dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="sanlkfdsljghnkfdj" />
 
