--- a/app/src/main/res/layout/wallet_recyclerview_assets_st_item.xml
+++ b/app/src/main/res/layout/wallet_recyclerview_assets_st_item.xml
@@ -12,7 +12,7 @@
         android:layout_marginLeft="35dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:src="@mipmap/wallet_eth_icon"
+        android:src="@mipmap/wallet_default_token_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
