--- a/app/src/main/res/layout/wallet_sign_message.xml
+++ b/app/src/main/res/layout/wallet_sign_message.xml
@@ -26,7 +26,7 @@
             android:gravity="center"
             android:text="@string/wallet_default_address_password"
             android:textColor="@color/wallet_text_black"
-            android:textSize="16sp" />
+            android:textSize="15sp" />
         <EditText
             android:id="@+id/et_password"
             android:layout_width="match_parent"
@@ -47,7 +47,7 @@
             android:text="@string/wallet_dialog_reject"
             android:textAllCaps="false"
             android:textColor="@color/wallet_cancel_red"
-            android:textSize="20sp" />
+            android:textSize="18sp" />
 
         <LinearLayout
             android:id="@+id/button_container"
@@ -95,7 +95,7 @@
                 android:gravity="center"
                 tools:text="@string/wallet_login_tip"
                 android:textColor="@color/wallet_text_black"
-                android:textSize="16sp" />
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/tip_content"
@@ -105,8 +105,8 @@
                 android:layout_marginBottom="15dp"
                 android:gravity="center"
                 tools:text="@string/wallet_login_sign_tip"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="16sp" />
+                android:textColor="@color/wallet_main_blue_color"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/tv_sign_message"
@@ -116,7 +116,7 @@
                 android:gravity="center"
                 tools:text="@string/wallet_login_sign_message"
                 android:textColor="@color/wallet_text_black"
-                android:textSize="16sp" />
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/sign_message"
@@ -124,8 +124,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
-                android:textColor="@color/colorPrimaryDark"
-                android:textSize="16sp" />
+                android:textColor="@color/wallet_main_blue_color"
+                android:textSize="15sp" />
 
         </LinearLayout>
 
