--- a/app/src/main/res/layout/wallet_upload_list_item.xml
+++ b/app/src/main/res/layout/wallet_upload_list_item.xml
@@ -12,10 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="20dp"
-        android:text="ID_FONT"
         android:drawableRight="@mipmap/wallet_arrow_down_gray"
         android:textSize="13sp"
        android:gravity="center_vertical"
+          android:paddingRight="10dp"
         android:paddingLeft="10dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
@@ -104,7 +104,7 @@
         android:layout_marginTop="15dp"
         android:textColor="@color/wallet_black"
         android:textSize="16sp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="@id/tv_select_file_name"
         app:layout_constraintTop_toBottomOf="@id/btn_select_file"
         tools:text="@string/wallet_upload" />
@@ -121,4 +121,12 @@
         app:layout_constraintLeft_toLeftOf="@id/tv_select_file_name"
         app:layout_constraintTop_toBottomOf="@id/file_path"
         tools:src="@mipmap/wallet_eth_icon" />
+
+    <View
+        android:background="@color/wallet_line_gray"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="1dp" />
 </com.idhub.wallet.me.information.view.UploadFileOtherView>
