--- a/app/src/main/res/layout/wallet_common_title_layout.xml
+++ b/app/src/main/res/layout/wallet_common_title_layout.xml
@@ -10,8 +10,9 @@
     <ImageView
         android:id="@+id/back_icon"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_height="match_parent"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
         android:src="@mipmap/wallet_back_black_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
