--- a/app/src/main/res/layout/wallet_activity_splash.xml
+++ b/app/src/main/res/layout/wallet_activity_splash.xml
@@ -4,7 +4,57 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/wallet_splash"
+    android:background="@color/wallet_white"
     tools:context=".splash.SplashActivity">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/wallet_splash_icon"
+        android:layout_marginBottom="7dp"
+        app:layout_constraintBottom_toTopOf="@id/middle_line"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <View
+        android:id="@+id/middle_line"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        app:layout_constraintTop_toBottomOf="@id/middle_line"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="7dp"
+        android:src="@mipmap/wallet_splash_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+<!--    <LinearLayout-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/middle_line">-->
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:textSize="30sp"-->
+<!--            android:textColor="@color/wallet_splash_blue_color"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="@string/wallet_splash_identity" />-->
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:textSize="30sp"-->
+<!--            android:layout_marginLeft="15dp"-->
+<!--            android:textColor="@color/wallet_splash_blue_color"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textStyle="bold"-->
+<!--            android:text="@string/wallet_splash_hub" />-->
+<!--    </LinearLayout>-->
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
