--- a/app/src/main/res/layout/wallet_fragment_me_level_item_view.xml
+++ b/app/src/main/res/layout/wallet_fragment_me_level_item_view.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:id="@+id/iv_vip_icon"
         android:src="@mipmap/wallet_idhub_svip_success"
-        android:layout_width="66dp"
+        android:layout_width="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_height="wrap_content" />
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
-        tools:text="未认证"
+        tools:text="pending approval"
         android:textColor="@color/wallet_white"
         android:textSize="8sp"
         android:background="@drawable/wallet_blue_background_3"
