--- a/app/src/main/res/layout/wallet_fragment_show_qrcode.xml
+++ b/app/src/main/res/layout/wallet_fragment_show_qrcode.xml
@@ -12,7 +12,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="12dp"
         android:text="@string/wallet_scanning_only"
-        android:textColor="@color/wallet_blue_text"
+        android:textColor="@color/wallet_main_blue_color"
         android:textSize="13sp"
         android:textStyle="bold" />
 
@@ -31,7 +31,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="12dp"
         android:text="@string/wallet_use_in_safe_environment"
-        android:textColor="@color/wallet_blue_text"
+        android:textColor="@color/wallet_main_blue_color"
         android:textSize="13sp"
         android:textStyle="bold" />
 
