--- a/app/src/main/res/layout/wallet_select_item_view.xml
+++ b/app/src/main/res/layout/wallet_select_item_view.xml
@@ -48,11 +48,17 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
         android:textSize="12sp"
-        android:textColor="@color/wallet_blue_text"
+        android:textColor="@color/wallet_light_blue_color"
         app:layout_constraintBottom_toBottomOf="@id/tv_wallet_name"
-        app:layout_constraintLeft_toRightOf="@id/tv_wallet_name"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/wallet_rectangle_line_blue_4"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        android:paddingTop="2dp"
+        android:paddingBottom="2dp"
         app:layout_constraintTop_toTopOf="@id/tv_wallet_name"
-        android:text="Default Address" />
+        android:text="@string/wallet_default_address" />
 
 
     <View
