--- a/app/src/main/res/values/wallet_strings.xml
+++ b/app/src/main/res/values/wallet_strings.xml
@@ -128,6 +128,7 @@
     <string name="wallet_please_input_file_name">请输入证明文件名称</string>
     <string name="wallet_file_name">证明文件名称：</string>
     <string name="wallet_upload_file">上传文件</string>
+    <string name="wallet_select_file">选择文件</string>
     <string name="wallet_file_manager_not_found">文件管理器未找到</string>
     <string name="wallet_not_empty_user_head">头像上传不能为空</string>
     <string name="wallet_user_name">用户名</string>
@@ -364,6 +365,9 @@
 
 
     <string name="wallet_vip_my_medal">我的勋章</string>
+    <string name="wallet_idhub_vip_my_medal">IDHub凭证</string>
+    <string name="wallet_security_vip_my_medal">证券型通证凭证</string>
+
     <string name="wallet_main_back_double_click">再按一次返回键关闭程序</string>
     <string name="wallet_chinese">简体中文</string>
     <string name="wallet_english">English</string>
@@ -375,7 +379,7 @@
     <string name="wallet_user_info_name">名称</string>
     <string name="wallet_user_info_did">DID</string>
     <string name="wallet_copy_success">复制成功</string>
-    //未翻译
+  
     <string name="wallet_file_size_20">文件必须小于20MB</string>
     <string name="wallet_user_info">个人信息</string>
     <string name="wallet_user_info_head">头像</string>
@@ -383,5 +387,7 @@
     <string name="wallet_address_none_balance">地址余额不足，请先充值</string>
     <string name="wallet_initialize_replace">聚合身份与默认地址绑定不成功，请重新调用合约进行绑定,请输入默认地址密码</string>
     <string name="wallet_recovery_replace">聚合身份与新地址重新绑定不成功，请重新调用合约进行绑定,请输入默认地址密码</string>
-
+     
+    <string name="wallet_splash_identity">Identity</string>
+    <string name="wallet_splash_hub">Hub</string>
 </resources>
