--- a/app/src/main/res/layout/wallet_fragment_me_level_item_view.xml
+++ b/app/src/main/res/layout/wallet_fragment_me_level_item_view.xml
@@ -2,7 +2,7 @@
 <com.idhub.wallet.me.view.MeBottomItemView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="70dp"
     android:layout_gravity="center"
     android:layout_height="wrap_content">
 
