--- a/app/src/main/res/layout/wallet_activity_erc1400_detail.xml
+++ b/app/src/main/res/layout/wallet_activity_erc1400_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".wallet.token.Erc1400DetailActivity">
+    tools:context=".wallet.token.activity.Erc1400DetailActivity">
 
 
     <TextView
