--- a/app/src/main/res/layout/wallet_recycler_view_token_remove_item.xml
+++ b/app/src/main/res/layout/wallet_recycler_view_token_remove_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.idhub.wallet.wallet.token.view.TokenManagerItemView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.idhub.wallet.wallet.token.view.TokenRemoveItemView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -42,11 +42,12 @@
         tools:text="0xadasdadasdasd" />
 
     <ImageView
-        android:id="@+id/iv_token_add"
+        android:id="@+id/iv_token_remove"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_marginRight="5dp"
         android:padding="10dp"
+        android:src="@mipmap/wallet_assets_remove_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -57,4 +58,4 @@
         android:layout_marginTop="20dp"
         android:background="@color/wallet_line_gray"
         app:layout_constraintTop_toBottomOf="@id/iv_token_icon" />
-</com.idhub.wallet.wallet.token.view.TokenManagerItemView>
+</com.idhub.wallet.wallet.token.view.TokenRemoveItemView>
